Correct positions for elements in header and in herotext

--- a/index.html
+++ b/index.html
@@ -8,35 +8,36 @@
     </head>
     <body>
         <div class="header">
-            <div class="logo">Logo</div>
-            <div class="menulinks">
-                <a href="#">link1</a>
-                <a href="#">link2</a>
-                <a href="#">link3</a>
+            <div class="logo"><h1>HEADER LOGO</h1></div>
+            <div class="headerlinks">
+                <a href="#">header link 1</a>
+                <a href="#">header link 2</a>
+                <a href="#">header link 3</a>
             </div>
         </div>
         <div class="body">
-            <div class="container1">
+            <div class="container one">
                 <div class="herotext">
-                    <h1>hero text</h1>
-                    <p>some text</p>
-                    <button>a button</button>
+                    <h1>this website is awesome!</h1>
+                    <p>this website has some subtext that goes here under the main title. it's a smaller font and the color is lower contrast.</p>
+                    <button>sign up!</button>
                 </div>
                 <div class="image">
                     <p>this is a placeholder for an image.</p>
                 </div>
             </div>
-            <div class="container2">
+            <div class="container two">
                 <h1>random info</h1>
-                <div class="info">
-                    <p>this is the images and captions</p>
+                <div class="cards">
+                    <div class="boxes">thisisabox</div>
+                    <div class="text">thisisacaption</div>
                 </div>
             </div>
-            <div class="container3">
+            <div class="container three">
                 <h2>quote</h2>
                 <h3>author</h3>
             </div>
-            <div class="container4">
+            <div class="container four">
                 <div class="signup">
                     <h2>call to action</h2>
                     <p>this is where u sign up</p>
