Replaced herotext image
added images and positioned elements inside container2

--- a/index.html
+++ b/index.html
@@ -22,15 +22,27 @@
                     <p>this website has some subtext that goes here under the main title. it's a smaller font and the color is lower contrast.</p>
                     <button>sign up!</button>
                 </div>
-                <div class="image">
-                    <p>this is a placeholder for an image.</p>
-                </div>
+                <img src="./images/aes.webp" alt="anime gif of rain falling into a pond">
             </div>
             <div class="container two">
                 <h1>random info</h1>
-                <div class="cards">
-                    <div class="boxes">thisisabox</div>
-                    <div class="text">thisisacaption</div>
+                <div class="cardwrapper">
+                    <div class="card">
+                        <img src="./images/aes2.jpg" alt="anime pond with leaves">
+                        <div class="text">this is some subtext under an illustration or image</div>
+                    </div>
+                    <div class="card">
+                        <img src="./images/aes2.jpg" alt="anime pond with leaves">
+                        <div class="text">this is some subtext under an illustration or image</div>
+                    </div>
+                    <div class="card">
+                        <img src="./images/aes2.jpg" alt="anime pond with leaves">
+                        <div class="text">this is some subtext under an illustration or image</div>
+                    </div>
+                    <div class="card">
+                        <img src="./images/aes2.jpg" alt="anime pond with leaves">
+                        <div class="text">this is some subtext under an illustration or image</div>
+                    </div>
                 </div>
             </div>
             <div class="container three">
