--- a/index.html
+++ b/index.html
@@ -1,62 +1,73 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Landing Page</title>
-        <link rel="stylesheet" href="./styles.css">
-    </head>
-    <body>
-        <div class="header">
-            <div class="logo"><h1>HEADER LOGO</h1></div>
-            <div class="headerlinks">
-                <a href="#">header link 1</a>
-                <a href="#">header link 2</a>
-                <a href="#">header link 3</a>
-            </div>
+
+<head>
+    <meta charset="utf-8">
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="./styles.css">
+</head>
+
+<body>
+    <div class="header">
+        <div class="logo">
+            <h1>HEADER LOGO</h1>
         </div>
-        <div class="body">
-            <div class="container one">
-                <div class="herotext">
-                    <h1>this website is awesome!</h1>
-                    <p>this website has some subtext that goes here under the main title. it's a smaller font and the color is lower contrast.</p>
-                    <button>sign up!</button>
+        <div class="headerlinks">
+            <a href="#">header link 1</a>
+            <a href="#">header link 2</a>
+            <a href="#">header link 3</a>
+        </div>
+    </div>
+    <div class="body">
+        <div class="container one">
+            <div class="herotext">
+                <h1>this website is awesome!</h1>
+                <p>this website has some subtext that goes here under the main title. it's a smaller font and the color
+                    is lower contrast.</p>
+                <button>sign up!</button>
+            </div>
+            <img src="./images/aes.webp" alt="anime gif of rain falling into a pond">
+        </div>
+        <div class="container two">
+            <h1>random info</h1>
+            <div class="cardwrapper">
+                <div class="card">
+                    <img src="./images/aes2.jpg" alt="anime pond with leaves">
+                    <div class="text">this is some subtext under an illustration or image</div>
                 </div>
-                <img src="./images/aes.webp" alt="anime gif of rain falling into a pond">
-            </div>
-            <div class="container two">
-                <h1>random info</h1>
-                <div class="cardwrapper">
-                    <div class="card">
-                        <img src="./images/aes2.jpg" alt="anime pond with leaves">
-                        <div class="text">this is some subtext under an illustration or image</div>
-                    </div>
-                    <div class="card">
-                        <img src="./images/aes2.jpg" alt="anime pond with leaves">
-                        <div class="text">this is some subtext under an illustration or image</div>
-                    </div>
-                    <div class="card">
-                        <img src="./images/aes2.jpg" alt="anime pond with leaves">
-                        <div class="text">this is some subtext under an illustration or image</div>
-                    </div>
-                    <div class="card">
-                        <img src="./images/aes2.jpg" alt="anime pond with leaves">
-                        <div class="text">this is some subtext under an illustration or image</div>
-                    </div>
+                <div class="card">
+                    <img src="./images/aes2.jpg" alt="anime pond with leaves">
+                    <div class="text">this is some subtext under an illustration or image</div>
                 </div>
-            </div>
-            <div class="container three">
-                <h2>quote</h2>
-                <h3>author</h3>
-            </div>
-            <div class="container four">
-                <div class="signup">
-                    <h2>call to action</h2>
-                    <p>this is where u sign up</p>
-                    <button>click it!</button>
+                <div class="card">
+                    <img src="./images/aes2.jpg" alt="anime pond with leaves">
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="card">
+                    <img src="./images/aes2.jpg" alt="anime pond with leaves">
+                    <div class="text">this is some subtext under an illustration or image</div>
                 </div>
             </div>
         </div>
-        <div class="footer">this is the footer</div>
-    </body>
+        <div class="container three">
+            <div class="quotewrapper">
+                
+                    This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space,
+                    or maybe people will actually read it. Who knows? All I know is that it looks nice.
+                
+                <h3>-Thor, God of Thunder</h3>
+            </div>
+        </div>
+        <div class="container four">
+            <div class="signup">
+                <h2>call to action</h2>
+                <p>this is where u sign up</p>
+                <button>click it!</button>
+            </div>
+        </div>
+    </div>
+    <div class="footer">this is the footer</div>
+</body>
+
 </html>
