--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta charset="utf-8">
     <title>Landing Page</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,100&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -60,14 +63,16 @@
             </div>
         </div>
         <div class="container four">
-            <div class="signup">
-                <h2>call to action</h2>
-                <p>this is where u sign up</p>
+            <div class="signupwrapper">
+                <div class="calltoaction">
+                <h2>Call to action! It's time!</h2>
+                <p>Sign up for our product by clicking that button right over there!
+                </div>
                 <button>click it!</button>
             </div>
         </div>
     </div>
-    <div class="footer">this is the footer</div>
+    <div class="footer">The Odin Project &copy 2023</div>
 </body>
 
 </html>
